--- a/templates/Front/Content/Category/categoryList.html.twig
+++ b/templates/Front/Content/Category/categoryList.html.twig
@@ -5,13 +5,13 @@
                 {% if loop.index0 == 2 %}
                     <li class="list-prelist-categories__item list-prelist-categories__item--text-info">
                         <h2 class="list-prelist-categories__item__text js-not-implemented-yet">
-                            Se správným krmením dosáhnete lepších výsledků. Máme zkušenosti a dokážeme vám dobře poradit.
+                            {{ currentCategory.rightBannerText }}
                         </h2>
                     </li>
                 {% elseif loop.index0 == 6 %}
                     <li class="list-prelist-categories__item list-prelist-categories__item--text-info">
                         <h2 class="list-prelist-categories__item__text js-not-implemented-yet">
-                            Přijďte se podívat do naší moderní prodejny v Liberci.  Těšíme se na vás.
+                            {{ currentCategory.leftBannerText }}
                         </h2>
                     </li>
                 {% endif %}
