--- a/assets/styles/frontend/common/layout/footer.less
+++ b/assets/styles/frontend/common/layout/footer.less
@@ -52,7 +52,7 @@
                 width: 96px;
                 height: 57px;
 
-                background: url('@{path-design}/footer-right-top-corner.png');
+                background: url('@{path-design}/footer-right-top-corner.png') no-repeat;
             }
 
             &:after {
@@ -63,7 +63,7 @@
                 width: 59px;
                 height: 33px;
 
-                background: url('@{path-design}/footer-right-bottom-corner.png');
+                background: url('@{path-design}/footer-right-bottom-corner.png') no-repeat;
             }
         }
     }
@@ -343,7 +343,7 @@
             width: 96px;
             height: 57px;
 
-            background: url('@{path-design}/footer-right-top-corner.png');
+            background: url('@{path-design}/footer-right-top-corner.png') no-repeat;
 
             @media @query-lg {
                 display: block;
@@ -359,7 +359,7 @@
             width: 59px;
             height: 33px;
 
-            background: url('@{path-design}/footer-left-top-corner.png');
+            background: url('@{path-design}/footer-left-top-corner.png') no-repeat;
 
             @media @query-lg {
                 display: block;
