--- a/assets/styles/frontend/common/layout/header/logo.less
+++ b/assets/styles/frontend/common/layout/header/logo.less
@@ -15,6 +15,15 @@
         text-align: left;
     }
 
+    .header--small & {
+        max-width: 150px;
+        margin: auto;
+
+        @media @query-lg {
+            max-width: 100%;
+        }
+    }
+
     img {
         max-height: 100%;
     }
