--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -57,6 +57,20 @@
         </div>
     {% endif %}
 
+    {% if newProducts is not empty %}
+        <div class="web__line">
+            <div class="web__container web__container--no-padding">
+                <div id="top-products" class="box-products-slider">
+                    <h2 class="box-products-slider__title">
+                        {{ 'Novinky'|trans }}
+                    </h2>
+                    <a href="{{ url('front_product_list', { id: newsCategory.id }) }}">{{ 'Přejít na všechny novinky'|trans }}</a>
+                    {{ productList.horizontalList(newProducts, '', 'h3', 'accessories-products', false, false, true) }}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
     <div class="web__line">
         <div class="web__container web__container--border-radius web__container--dark">
             {% include 'Front/Content/Article/index.html.twig' with { blogArticles: homepageBlogArticles, articleClassModification: 'list-articles--white' } %}
