FE search page: only the search box in header is displayed
- in the page, there is no need to display the search input again, just
the search phrase is displayed

--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -17,9 +17,7 @@
                 <div class="box-search__title">
                     {{ 'Výsledky výrazu:'|trans }}
                 </div>
-                <div class="box-search__input">
-                    {{ render(controller('App\\Controller\\Front\\SearchController:boxAction')) }}
-                </div>
+                <span class="margin-left-10">"{{ searchText }}"</span>
             </div>
         </div>
     </div>
