Product is now excluded from all discounts (promo code, registration and order) when it is in any sale stock.

--- a/templates/Front/Inline/Common/discountExclusionNoticeMacro.html.twig
+++ b/templates/Front/Inline/Common/discountExclusionNoticeMacro.html.twig
@@ -1,5 +1,5 @@
 {% macro discountExclusionNotice(product, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, classModification = '') %}
-    {% if product.isRegistrationDiscountDisabled and product.isPromoDiscountDisabled %}
+    {% if (product.isRegistrationDiscountDisabled and product.isPromoDiscountDisabled) or product.isInAnySaleStock %}
         {{ _self.discountExclusionNoticeDetail(allDiscountExclusionText, classModification) }}
     {% elseif product.isRegistrationDiscountDisabled %}
         {{ _self.discountExclusionNoticeDetail(registrationDiscountExclusionText, classModification) }}
