--- a/templates/Front/Content/Blog/Category/list.html.twig
+++ b/templates/Front/Content/Blog/Category/list.html.twig
@@ -1,8 +1,8 @@
 {% if blogCategories|length > 0 %}
     <div class="box-blog__categories">
-        <div class="box-blog__categories__title">
+        <h3 class="box-blog__categories__title">
             {{ 'Kategorie článků'|trans }}
-        </div>
+        </h3>
         {% for blogCategory in blogCategories %}
             <a href="{{ url('front_blogcategory_detail', { id: blogCategory.id }) }}" class="box-blog__categories__item box-blog__categories__item--level-{{ blogCategory.level }}{{ blogCategory.id in activeCategoryIds ? ' active' : '' }}">
                 <i class="svg svg-tail"></i>
