--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -218,41 +218,55 @@
     <div class="{{ listCssClass }}" data-count-of-product="{{ products|length }}">
         {% for product in products %}
             <div class="{{ listCssClass }}__item">
-                <div class="{{ listCssClass }}__item__in">
-                    {% set productSellingPrice = getProductSellingPrice(product) %}
-                    <a href="{{ url('front_product_detail', {'id': product.id}) }}">
-                        <div class="{{ listCssClass }}__item__image dont-print">
-                            {{ image(product.productForCreatingImageAccordingToVariant, { size: 'list', alt: product.name, lazy: true }) }}
+                {% set productSellingPrice = getProductSellingPrice(product) %}
+                <a href="{{ url('front_product_detail', {'id': product.id}) }}">
+                    <div class="{{ listCssClass }}__item__image dont-print">
+                        {{ image(product.productForCreatingImageAccordingToVariant, { size: 'listDetailArticle', alt: product.name, lazy: true }) }}
+                    </div>
+                </a>
+
+                <div class="{{ listCssClass }}__item__info">
+                    <div class="{{ listCssClass }}__item__info__content">
+                        <div class="{{ listCssClass }}__item__info__content__left">
+                            <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__info__title" href="{{ url('front_product_detail', {'id': product.id}) }}">
+                                {{ product.name|striptags|raw }}
+                            <{{ '/' ~ productHeadingTagName|default('h2') }}>
                         </div>
-                    </a>
 
-                    <div class="{{ listCssClass }}__item__info">
-                        <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__info__title" href="{{ url('front_product_detail', {'id': product.id}) }}">
-                            {{ product.name|striptags|raw }}
-                        <{{ '/' ~ productHeadingTagName|default('h2') }}>
+                        <div class="{{ listCssClass }}__item__info__content__right">
+                            {% set productSellingPrice = getProductSellingPrice(product) %}
 
-                        {% set productSellingPrice = getProductSellingPrice(product) %}
-
-                        {% if productSellingPrice is not null %}
-                            <div class="{{ listCssClass }}__item__info__price">
-                                <div class="{{ listCssClass }}__item__info__price__item__main">
-                                    {% if productSellingPrice.hasHigherStandardPrice %}
-                                        <div class="{{ listCssClass }}__item__info__price__item__old">
-                                            {{ productSellingPrice.standardPrice.priceWithVat|price }}
-                                        </div>
-                                    {% endif %}
-
-                                    {% if productSellingPrice.priceFrom %}
-                                        {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
-                                    {% else %}
-                                        {{ productSellingPrice.priceWithVat|price }}
-                                    {% endif %}
+                            {% if productSellingPrice is not null %}
+                                <div class="{{ listCssClass }}__item__info__price">
+                                    <div class="{{ listCssClass }}__item__info__price__main">
+                                        {% if productSellingPrice.priceFrom %}
+                                            {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
+                                        {% else %}
+                                            {{ productSellingPrice.priceWithVat|price }}
+                                        {% endif %}
+                                        
+                                        {% if productSellingPrice.hasHigherStandardPrice %}
+                                            <div class="{{ listCssClass }}__item__info__price__old">
+                                                {{ productSellingPrice.standardPrice.priceWithVat|price }}
+                                            </div>
+                                        {% endif %}
+                                    </div>
                                 </div>
-                            </div>
-                        {% endif %}
-                        <div class="{{ listCssClass }}__item__add-button">
-                            {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'large', displayVariantSelectButton: true})) }}
+                            {% endif %}
+                            
+                            {% if not product.isMainVariant and product.calculatedAvailability %}
+                                {% if not product.isMainVariant and product.calculatedAvailability %}
+                                    {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: product, setDisplayNone: false, type: 'small' } %}
+                                {% else %}
+                                    <div class="in-availability">
+                                        {{ 'Dostupnost dle varianty'|trans }}
+                                    </div>
+                                {% endif %}
+                            {% endif %}
                         </div>
+                    </div>
+                    <div class="{{ listCssClass }}__item__add-button">
+                        {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'detailArticle', displayVariantSelectButton: true})) }}
                     </div>
                 </div>
             </div>
