--- a/templates/Front/Layout/header.html.twig
+++ b/templates/Front/Layout/header.html.twig
@@ -9,7 +9,7 @@
                 <ul class="top-bar__menu top-bar__menu--mobile-visible">
                     <li class="top-bar__menu__item">
                         <span class="top-bar__menu__item__text">
-                            <span class="top-bar__menu__item__text__title">{{ 'Bonusový program'|trans }}:</span>
+                            <span class="top-bar__menu__item__text__title top-bar__menu__item__text__title--colored">{{ 'Bonusový program'|trans }}:</span>
                             {{ 'Slevy pro každého až 18 %'|trans }}
                         </span>
                     </li>
