--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -22,6 +22,9 @@
         <div class="web__line">
             <div class="web__container">
                 <h1 class="box-list__title">
+                    {% if saleCategoryFriendlyUrl is not null %}
+                    Výprodej -
+                    {% endif %}
                     {{ category.getSeoH1(domain.id)|default(category.name) }}
                 </h1>
 
@@ -35,7 +38,11 @@
                     {% if paginationResult.results|length > 0 or filterFormSubmitted %}
                         <div class="box-list__panel js-product-list-panel">
                             <div class="box-filter js-product-filter">
-                                {% set categoryUrl = url('front_product_list', { id: category.id }) %}
+                                {% if saleCategoryFriendlyUrl is not null %}
+                                    {% set categoryUrl = url('front_sale_product_list', { friendlyUrl: saleCategoryFriendlyUrl }) %}
+                                {% else %}
+                                    {% set categoryUrl = url('front_product_list', { id: category.id }) %}
+                                {% endif %}
                                 {{ productFilterForm.filterForm(
                                     filterForm,
                                     categoryUrl,
@@ -53,7 +60,7 @@
                     <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
                         {% if visibleChildren is not empty %}
                             <div class="box-list__categories">
-                                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren} %}
+                                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category} %}
                             </div>
                         {% endif %}
                         {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
