design: add style for cart and choose gift

--- a/assets/styles/frontend/common/layout/layout.less
+++ b/assets/styles/frontend/common/layout/layout.less
@@ -43,6 +43,14 @@ img {
 
             background-color: transparent;
         }
+
+        &--bigger-gap {
+            margin-bottom: 20px;
+
+            @media @query-lg {
+                margin-bottom: 30px;
+            }
+        }
     }
 
     &__footer {
