--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -131,6 +131,7 @@
 @import "components/box/blog.less";
 @import "components/box/blog-gallery.less";
 @import "components/box/breadcrumb.less";
+@import "components/box/cart.less";
 @import "components/box/cart-bottom.less";
 @import "components/box/cart-empty.less";
 @import "components/box/cookies.less";
