--- a/assets/styles/frontend/common/components/box/progress.less
+++ b/assets/styles/frontend/common/components/box/progress.less
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    margin-bottom: @box-progress-item-gap;
 
     @media @query-lg {
         flex-direction: row;
