--- a/assets/styles/frontend/common/components/in/message.less
+++ b/assets/styles/frontend/common/components/in/message.less
@@ -16,6 +16,7 @@
     align-items: center;
     padding: @in-message-bottom-padding;
     margin-bottom: @in-message-bottom-gap;
+    line-height: 24px;
 
     border-radius: @radius;
     background-color: @color-f;
