--- a/assets/styles/frontend/common/components/table/cart.less
+++ b/assets/styles/frontend/common/components/table/cart.less
@@ -1,9 +1,5 @@
 @table-cart-item-gap: 10px;
-@table-cart-image-size: 101px;
-@table-cart-image-size-mobile: 71px;
-@table-cart-image-gap: @table-cart-item-gap;
-@table-cart-image-gap-vertical: 22px;
-@table-cart-row-left-width: 60%;
+@table-cart-image-size: 90px;
 @table-cart-spinbox-width: 120px;
 @table-cart-price-width: 164px;
 @table-cart-gift-white-space: 15px;
@@ -11,134 +7,131 @@
 .table-cart {
     display: flex;
     flex-direction: column;
-    margin-bottom: @margin-gap;
 
     &__row {
+        margin-bottom: 5px;
+        padding: 14px 30px;
+
+        background-color: @color-f;
+        border-radius: 4px;
+    }
+
+    &__content {
         display: flex;
         flex-direction: column;
-
-        border-bottom: 3px solid @color-border;
-
+        align-items: center;
+        
         @media @query-md {
             flex-direction: row;
         }
+    }
 
-        &__left {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: 100%;
-
-            @media @query-md {
-                width: @table-cart-row-left-width;
-            }
-        }
-
-        &__right {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: 100%;
-
-            @media @query-md {
-                width: calc(~"@{calc-base} - @{table-cart-row-left-width}");
-            }
-        }
+    &__messages {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
     }
 
     &__cell {
-        display: flex;
-
-        &__number {
-            color: @color-base;
-            font-size: 22px;
-            font-weight: 700;
-        }
-
-        &__image {
-            display: inline-block;
+        &--image {
             position: relative;
-            height: @table-cart-image-size-mobile + 2*@table-cart-image-gap-vertical;
-            width: @table-cart-image-size-mobile + 2*@table-cart-image-gap;
-
-            @media @query-xl {
-                height: @table-cart-image-size + 2*@table-cart-image-gap-vertical;
-                width: @table-cart-image-size + 2*@table-cart-image-gap;
-            }
+            height: @table-cart-image-size;
+            width: @table-cart-image-size;
 
             img {
                 .center-image();
-                padding: @table-cart-image-gap @table-cart-image-gap-vertical;
             }
         }
 
-        &__name {
-            flex: 1;
+        &--name {
+            @media @query-lg {
+                width: 336px;
+                padding-left: 20px;
+            }
+        }
+
+        &--availability {
+            @media @query-lg {
+                padding-left: @table-cart-item-gap;
+                width: 230px;
+            }
+        }
+
+        &--price-unit {
+            font-weight: 700;
 
             @media @query-lg {
-                padding-right: @table-cart-item-gap;
-            }
-
-            &__title {
-                display: block;
-                margin-bottom: 6px;
-
-                color: @color-base;
-                font-size: @font-size;
-                text-decoration: none;
-
-                &:hover {
-                    font-weight: 700;
-                }
-            }
-
-            &__text {
-                display: block;
-                margin-bottom: 6px;
-
-                font-size: @font-size-small;
+                width: 136px;
+                padding-left: @table-cart-item-gap;
             }
         }
 
-        &__spinbox {
+        &--spinbox {
             text-align: center;
             width: @table-cart-spinbox-width;
-            margin-bottom: 10px;
-            padding-right: @table-cart-item-gap;
-
-            @media @query-md {
-                margin-bottom: -20px;
-            }
-
-            &__link {
-                display: block;
-                margin-top: 8px;
-
-                font-size: @font-size-small;
+            
+            @media @query-lg {
+                width: 105px;
+                padding-left: @table-cart-item-gap;
             }
         }
 
-        &__price {
+        &--price {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
 
             width: @table-cart-price-width;
             text-align: right;
 
-            &__primary {
-                color: @color-base;
+            @media @query-lg {
+                width: 162px;
+                padding-left: @table-cart-item-gap;
+            }
+        }
+
+        &__name {
+            display: block;
+    
+            color: @color-base;
+            font-size: @font-size;
+            text-decoration: none;
+        }
+
+        &__gift {
+            display: block;
+            margin-top: 5px;
+            
+            &__block {
+                display: inline-block;
+                padding: 0 6px;
+                line-height: 21px;
+                
                 font-size: @font-size;
-                font-weight: 700;
+                background-color: rgba(213,48,48,0.15);
+                color: @color-red;
+                border-radius: @radius-very-small;
+            
+                &__title {
+                    text-transform: uppercase;
+                    font-weight: 700;
+                }
             }
+        }
+    
+        &__price-primary {
+            color: @color-base;
+            font-size: @font-size;
+            font-weight: 700;
+        }
 
-            &__line-through {
-                padding-right: 5px;
-                padding-top: 2px;
+        &__discount {
+            color: @color-red;
+        }
 
-                font-size: @font-size-small;
-                text-decoration: line-through;
-            }
+        &__remove {
+            line-height: 13px;
+
+            font-size: 11px;
         }
     }
 
@@ -166,9 +159,7 @@
     &__order-gifts {
         display: flex;
         flex-direction: column;
-        padding: 30px 0 15px;
-
-        border-bottom: 3px solid @color-light;
+        padding-top: 30px;
 
         @media @query-lg {
             flex-direction: row;
