--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -298,7 +298,7 @@
                         <h2 class="box-products-slider__title">
                             {{ accessoriesHeadline }}
                         </h2>
-                        {{ productList.horizontalList(accessories, '', 'h3', 'accessories-products', true) }}
+                        {{ productList.horizontalList(accessories, '', 'h3', 'accessories-products', true, false, true) }}
                     </div>
                 </div>
             </div>
