--- a/templates/Front/Content/Product/topProductsList.html.twig
+++ b/templates/Front/Content/Product/topProductsList.html.twig
@@ -2,7 +2,7 @@
 {% if topProducts is not empty %}
     <div class="web__line">
         <div class="web__container web__container--no-padding">
-            <div id="top-products" class="box-products-slider">
+            <div class="box-products-slider">
                 <h2 class="box-products-slider__title">
                     {{ 'Tento měsíc máme v akci'|trans }}
                 </h2>
