--- a/templates/Front/Content/Product/bestsellingProductsList.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsList.html.twig
@@ -1,8 +1,8 @@
 {% import 'Front/Content/Product/productListMacro.html.twig' as productList %}
 {% if productViews|length > 0 %}
     <div class="web__line">
-        <div class="web__container web__container--no-padding">
-            <div id="best-selling" class="box-products-slider">
+        <div class="web__container">
+            <div class="box-products-slider">
                 <h2 class="box-products-slider__title">
                     {{ 'Nejoblíbenější kousky'|trans }}
                 </h2>
