[TF-499] Fix selling denied for variants
- we do not work with stock quantities of main variants (it may be 0) so it must not affect their calculatedSellingDenied

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -140,7 +140,7 @@
                                     </div>
                                 {% endif %}
 
-                                {% if product.isMainVariant and not product.calculatedSellingDenied %}
+                                {% if product.isMainVariant %}
                                     <ul {% if getProductSellingPrice(product) is not null %}itemprop="offers"
                                         itemscope
                                         itemtype="http://schema.org/AggregateOffer" {% endif %}
