--- a/assets/styles/frontend/common/components/in/article.less
+++ b/assets/styles/frontend/common/components/in/article.less
@@ -30,7 +30,7 @@
     }
 
     &__main-img {
-        margin-bottom: 20px;
+        margin-bottom: 37px;
         text-align: center;
 
         img {
@@ -39,11 +39,11 @@
     }
 
     &__img-caption {
-        margin-top: -20px;
-        margin-bottom: 20px;
+        opacity: 0.5;
+        text-align: left;
 
         color: @color-base;
-        font-size: 13px;
-        font-family: @font;
+        font-size: 12px + 1px;
+        font-family: @font-alt;
     }
 }
