design: add style for responsive cart

--- a/assets/styles/frontend/common/components/box/cart.less
+++ b/assets/styles/frontend/common/components/box/cart.less
@@ -12,9 +12,13 @@
     }
 
     &__info {
-        padding: @box-cart-info-gap;
+        padding: 20px;
 
         border-radius: @radius;
         background-color: @color-light;
+
+        @media @query-lg {
+            padding: @box-cart-info-gap;
+        }
     }
 }
