design: add style for next gifts and edit template for preview

--- a/assets/styles/frontend/common/components/box/cart.less
+++ b/assets/styles/frontend/common/components/box/cart.less
@@ -13,6 +13,7 @@
 
     &__info {
         padding: 20px;
+        margin-bottom: @box-cart-info-gap;
 
         border-radius: @radius;
         background-color: @color-light;
