--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -1,79 +1,33 @@
 @box-preview-bg: @color-f;
 @box-preview-width: @box-order-cart-width;
 @box-preview-gap: 90px;
-@box-preview-padding: 30px 30px 0 30px;
-@box-preview-padding-small: 15px 20px 0 20px;
 
 @box-preview-coupone-code-button-width: 92px;
 
 .box-preview {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-
-    background-color: @box-preview-bg;
-
-    &__row {
-        padding: @box-preview-padding-small;
-
-        background-color: @color-f;
-        border-radius: @radius;
-
-        @media @query-md {
-            border: 3px solid @color-border;
-        }
-
-        @media @query-vl {
-            padding: @box-preview-padding;
-        }
-
-        &--dark {
-            padding-bottom: 20px;
-
-            background-color: @color-box;
-        }
-
-        &--no-bottom {
-            border-bottom: 0;
-        }
-
-        &--thin-top-border {
-            padding-top: 14px;
-
-            border-top: 1px solid @color-border;
-        }
-
-        &--without-radius {
-            border-radius: 0;
-        }
-
-        &--without-radius-bottom {
-            border-radius: @radius @radius 0 0;
-        }
-
-        &--without-radius-top {
-            border-radius: 0 0 @radius @radius;
-        }
+    &__content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
-    &__back {
-        margin-bottom: 2px;
+    &__action {
+        background-attachment: @color-f;
     }
 
     &__coupone {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
         &__title {
+            line-height: 18px;
+            margin-right: 20px;
+
+            font-size: 16px;
+            font-weight: 700;
             color: @color-base;
-
-            &__label {
-                font-size: 16px!important;
-                font-weight: 700;
-            }
-        }
-
-        &__text {
-            display: block;
-            width: 100%;
-            margin-top: 10px;
+            text-transform: uppercase;
         }
 
         &__code {
@@ -103,25 +57,5 @@
         color: @color-base;
         font-size: @font-size-small + 1px;
         font-family: @font-alt;
-    }
-
-    &__button {
-        margin-bottom: 24px;
-        padding: 5px 10px;
-
-        text-decoration: uppercase;
-        text-transform: uppercase;
-        font-size: 20px;
-
-        &__icon {
-            display: none;
-
-            @media @query-sm {
-                display: inline-block;
-                position: relative;
-                top: 2px;
-                right: 5px;
-            }
-        }
     }
 }
