--- a/assets/styles/frontend/common/components/table/cart.less
+++ b/assets/styles/frontend/common/components/table/cart.less
@@ -238,14 +238,15 @@
     }
 
     &__next-gifts {
-        padding: 30px 0 15px;
-
+        margin-bottom: 30px;
         border-bottom: 3px solid @color-light;
 
         &__title {
             margin: 0 0 20px;
 
+            font-size: 16px;
             font-weight: 700;
+            text-transform: uppercase;
         }
     }
 }
